# menopy

./: LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
src/menopy/: constants.py  extract_tokens.py  head_extractor.py  load_menoxml.py  menodoc.py  menota_parser Kopie.py  menota_parser.py  parser.py  token.py
